syntax = "proto3";

package single_and_single;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
  string message = 2;
}

message HelloResponse {
  string message = 1;
}
